<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abbrev_wday_month_day_no_year">EMMMd</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">CoolHome</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buttom_bar_Dismiss">Dismiss</string>
    <string name="buttom_bar_Open">Open</string>
    <string name="buttom_bar_Options">Options</string>
    <string name="buttom_bar_left">Notifications</string>
    <string name="buttom_bar_menu">Menu</string>
    <string name="buttom_bar_reset">Reset</string>
    <string name="buttom_bar_right">Message</string>
    <string name="buttom_bar_save">Save</string>
    <string name="buttom_bar_select">Select</string>
    <string name="buttom_bar_set">Set</string>
    <string name="cellular_sign_dialog_title">Sign in network</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charg_ok">Battery fully charged</string>
    <string name="charging_format">Charging... (%d%%)</string>
    <string name="clock_12hr_format">hma</string>
    <string name="clock_24hr_format">Hm</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="mainmenu_add">Add</string>
    <string name="mainmenu_call">"Recent
calls"</string>
    <string name="mainmenu_camera">Camera</string>
    <string name="mainmenu_contacts">Contacts</string>
    <string name="mainmenu_gallery">Gallery</string>
    <string name="mainmenu_internet">Internet</string>
    <string name="mainmenu_media">"Media
center"</string>
    <string name="mainmenu_mms">Messaging</string>
    <string name="mainmenu_music">Music</string>
    <string name="mainmenu_notify">Notifications</string>
    <string name="mainmenu_tool">"Tools &amp;
Settings"</string>
    <string name="mainmenu_tool_alarm">Alarm</string>
    <string name="mainmenu_tool_calculator">Calculator</string>
    <string name="mainmenu_tool_calendar">Calendar</string>
    <string name="mainmenu_tool_file_manager">File manager</string>
    <string name="mainmenu_tool_notepad">Notepad</string>
    <string name="mainmenu_tool_stopwatch">Stopwatch</string>
    <string name="mainmenu_tool_timer">Timer</string>
    <string name="mainmenu_tool_title">Tools</string>
    <string name="mainmenu_tool_voice_recorder">Voice recorder</string>
    <string name="mainmenu_tool_world_clock">World clock</string>
    <string name="mainmenu_tools_tweaks">"Tools &amp;
Tweaks"</string>
    <string name="miss_call_format">" %d missed call"</string>
    <string name="miss_calls_format">" %d missed calls"</string>
    <string name="miss_mms_format">" %d new message"</string>
    <string name="miss_mmss_format">" %d new messages"</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="no_sim_found">No Sim found</string>
    <string name="notification_list_empty">Empty</string>
    <string name="notification_menu_clean_all">Clear All</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pco_value_5_message">ready to activate?</string>
    <string name="pco_value_5_title">Activate your phone</string>
    <string name="register_not_of_verizon">This SIM card is not from Verizon Wireless</string>
    <string name="search_menu_title">Search</string>
    <string name="shortcut_call">Recent calls</string>
    <string name="shortcut_media">Media center</string>
    <string name="shortcut_tool">Tools &amp; Settings</string>
    <string name="shortcut_verizon">Verizon apps</string>
    <string name="shortcuts">Key shortcuts</string>
    <string name="shortcuts_text_down">Down key</string>
    <string name="shortcuts_text_left">Left key</string>
    <string name="shortcuts_text_right">Right key</string>
    <string name="shortcuts_text_up">Up key</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_media_center">MediaCenter</string>
    <string name="tool_name">Tools &amp; Settings</string>
    <string name="voice_mail_format">" %d voice mail"</string>
    <string name="voice_mails_format">" %d voice mails"</string>
    <string name="wifi_sign_dialog_no_sign">"Don't Sign In"</string>
    <string name="wifi_sign_dialog_opne_browser">Open Browser</string>
    <string name="wifi_sign_dialog_query">"The network you're connecting to requires you to sign in through your browser first."</string>
    <string name="wifi_sign_dialog_title">Sign in Wi-Fi network</string>
    <string name="alarms_shortcut">Alarms</string>
    <string name="bluetooth_shortcut">bluetooth</string>
    <string name="calendar_shortcut">Calendar</string>
    <string name="email_shortcut">Email</string>
    <string name="file_manager_shortcut">File Manager</string>
    <string name="fm_radio_shortcut">FM Radio</string>
    <string name="gallery_shortcut">Gallery</string>
    <string name="music_shortcut">music</string>
    <string name="notes_shortcut">Notes</string>
    <string name="notifications_shortcut">Notifications</string>
    <string name="recent_apps_shortcut">Recent Apps</string>
    <string name="settings_shortcut">Settings</string>
    <string name="stopwatch_shortcut">Stopwatch</string>
    <string name="timer_shortcut">Timer</string>
    <string name="voice_recorder_shortcut">Voice Recorder</string>
    <string name="clock_shortcut">Clock</string>
</resources>
