<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/buttonbar" android:layout_width="fill_parent" android:layout_height="@dimen/buttom_bar_height" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buttom_bar_left" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/ButtonBarTextStyle" />
    <TextView android:id="@id/center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buttom_bar_menu" android:layout_centerInParent="true" style="@style/ButtonBarTextStyle" />
    <TextView android:id="@id/right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buttom_bar_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/ButtonBarTextStyle" />
</RelativeLayout>